# roguelike-game

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
CMake/: CppLint.cmake  FindBearLibTerminal.cmake  Findlog4cxx.cmake
include/roguelike/ECS/: Component.h  ComponentManager.h  Engine.h  Entity.h  EntityManager.h  FamilyTypeID.h  GameLoop.h  IComponent.h  IEngineControl.h  IEntity.h  ISystem.h  Platform.h  SystemManager.h
include/roguelike/ECS/Event/: Event.h  EventDelegate.h  EventDispatcher.h  EventListener.h  EventSender.h  IEvent.h  IEventDelegate.h
include/roguelike/ECS/system/: ISystem.h  IUpdate.h  IntervalIteratingSystem.h  IntervalSystem.h  IteratingSystem.h  System.h  SystemManager.h
include/roguelike/Log/: logging.h
include/roguelike/core/: Geometry.h  Line.h  Rectangle.h  numerics.h  types.h  vector2.h  vector2f.h
include/roguelike/game/: BehaviourSystem.h  BoxColliderComponent.h  CollisionSystem.h  Consts.h  ControlComponent.h  ControlSystem.h  Game.h  InputSystem.h  PlayerEntity.h  RenderComponent.h  RenderingSystem.h  TransformComponent.h  WallEntity.h  buttons.h  vector.h
include/roguelike/game/components/: BehaviourComponent.h  BoxColliderComponent.h  ControlComponent.h  GathererComponent.h  ItemComponent.h  LogComponent.h  MovementComponent.h  RenderComponent.h  RenderTargetComponent.h  RigidBodyComponent.h  TileComponent.h  TransformComponent.h  WorthComponent.h
include/roguelike/game/entities/: CoinEntity.h  ConsoleWindowEntity.h  FillerEntity.h  GameWindowEntity.h  LogEntity.h  PlayerEntity.h  StatsWindowEntity.h  WallEntity.h  WindowEntity.h
include/roguelike/game/events/: LogEvent.h
include/roguelike/game/stages/: IStage.h  Stage_1.h  lvl1.h
include/roguelike/game/systems/: BehaviourSystem.h  CollisionSystem.h  ControlSystem.h  ExitSystem.h  InputSystem.h  ItemGatheringSystem.h  LogRenderingSystem.h  LogSystem.h  MovementSystem.h  RenderingSystem.h  TileRenderingSystem.h
lib/: .gitignore
lib/BearLibTerminal/: README.md
src/: CMakeLists.txt  main.cpp  ncurses_example.cpp
src/ECS/: Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  ECS.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityManager.h  EventHandler.h  FamilyTypeID.cpp  FamilyTypeID.h  GameLoop.cpp  IComponent.cpp  IComponent.h  IComponentManager.h  IEntity.cpp  IEntity.h  ISystem.cpp  ISystem.h  Platform.h  README.md  System.cpp  System.h  SystemManager.cpp  SystemManager.h
src/ECS/Event/: Event.h  EventDelegate.h  EventDispatcher.cpp  EventDispatcher.h  EventListener.h  EventSender.h  IEvent.cpp
src/ECS/system/: IntervalIteratingSystem.cpp  IntervalSystem.cpp  IteratingSystem.cpp  SystemManager.cpp
src/EntityComponentSystem/: CMakeLists.txt
src/EntityComponentSystem/include/ECS/: ComponentManager.h  ECS.h  Engine.h  EntityManager.h  IComponent.h  IEngineControl.h  Platform.h  SystemManager.h
src/EntityComponentSystem/include/ECS/Event/: EventDispatcher.h  EventSender.h  IEvent.h
src/EntityComponentSystem/src/: FamilyTypeID.cpp  GameLoop.cpp
src/EntityComponentSystem/test/: CMakeLists.txt  main.cpp
src/Log/: log4cxx.properties  logging.cpp  logging.h
src/Logging/: CMakeLists.txt
src/Logging/include/Log/: logging.h
src/core/: Geometry.cpp  Line.cpp  numerics.cpp  vector2.cpp
src/game/: CMakeLists.txt  CollisionSystem.cpp  ControlSystem.cpp  Game.cpp  Game.h  InputSystem.cpp  ItemGatheringSystem.cpp  MovementSystem.cpp  RenderingSystem.cpp  main.cxx  ncurses_example.cpp
src/game/include/game/: Game.h
src/game/src/: Game.cpp  main.cpp
src/game/stages/: Stage_1.cpp
src/game/systems/: CollisionSystem.cpp  ControlSystem.cpp  ExitSystem.cpp  InputSystem.cpp  InputSystem_BLT.cpp  ItemGatheringSystem.cpp  MovementSystem.cpp  RenderingSystem.cpp  RenderingSystem_BLT.cpp  TileRenderingSystem.cpp
src/game/test/: CMakeLists.txt  ncurses_example.cpp
src/lib/: README.md
test/: CMakeLists.txt
test/ECS/: main.cpp
test/game/: ncurses_example.cpp
