set(PROJECT_NAME EntityComponentSystem)
set(LIBRARY_NAME ECS)

set(LIBRARY_HEADERS_DIR include/${LIBRARY_NAME})
set(LIBRARY_SOURCE_DIR src)

file(GLOB_RECURSE LIBRARY_HEADERS ${LIBRARY_HEADERS_DIR} *.h)
file(GLOB_RECURSE LIBRARY_SOURCE ${LIBRARY_SOURCE_DIR} *.cpp)


project(${PROJECT_NAME})

add_library(${LIBRARY_NAME} STATIC ${LIBRARY_HEADERS} ${LIBRARY_SOURCE})
target_include_directories(
    ${LIBRARY_NAME} PRIVATE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/${LIBRARY_NAME}>
    $<INSTALL_INTERFACE:include/${LIBRARY_NAME}>
)

target_include_directories(
    ${LIBRARY_NAME} PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

add_subdirectory(test)