set(LIBRARY_NAME Log)
set(LIBRARY_HEADERS_DIR include/${LIBRARY_NAME})

file(GLOB_RECURSE LIBRARY_HEADERS ${LIBRARY_HEADERS_DIR} *.h)

project(${LIBRARY_NAME} LANGUAGES CXX)

find_package(log4cxx REQUIRED)
include_directories(${LOG4CXX_INCLUDE_DIR})

add_library(${LIBRARY_NAME} INTERFACE)

target_include_directories(
    ${LIBRARY_NAME} INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/${LIBRARY_NAME}>
    $<INSTALL_INTERFACE:include/${LIBRARY_NAME}>
)

target_include_directories(
    ${LIBRARY_NAME} INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)